--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </main>
 
     <footer class="footer">
-        <span class="span">Hecho Por @Jhon Alan Fernandez Maturano</span>
+        <span class="span">Hecho Por @Victor Manuel Tacuri Rengifo</span>
     </footer>
 
 </body>
